# estudo-arduino

./: resposta.md
01/: PORTAS.md  README.md  compile_commands.json  main  main.c  main.hex  util.h
01/.cache/clangd/index/: main.c.D9F052FA7856DB62.idx
02/: README.md  main  main.c  main.hex  projeto.pdsprj
03/: .gitignore  README.md  main.c
04/: Makefile  main.c  main.c.2
05/: Makefile  main.c
06/: main.c
08/: main.c
10/: main.c
11/: main.c
12/: main.c
13/: main.c  projeto.pdsprj
13/12/: arduino.md  main.c
blink/: .local.vimrc
blink/pull_up/: Makefile  configure.h  gpio.c  is_low.h  main.c  toggle.c  toggle.h
blink/test_proteus/: .projections.json  CMakeLists.txt  UBUNTU.md  address.h  cansi-ident.sh  cproto.tools  ctags_with_dep.sh  gpio.h  is_low.c  main.c  off.c  off.h  on.c  on.h  tags
common/: arduino.mk
doc/: cli.md  ldoc.cli.md  ldoc.tempo-de-resposta-a-interrupcoes.md  mk-ldoc.sh  read.sh
